--- a/FinPlan.Web/Pages/CostOfLivingPlanner.razor
+++ b/FinPlan.Web/Pages/CostOfLivingPlanner.razor
@@ -836,7 +836,7 @@
             modalPerItemInflationPercent = Items[idx].PerItemInflationPercent ?? 0;
             modalIncludeInRetirement = Items[idx].IncludeInRetirement;
             showDetailsModal = true;
-            detailsEditMode = false;
+            detailsEditMode = true; // Always open in edit mode
         }
     }
 
